syntax = "proto3";
package net.cli;
import "base_msg_struct.proto";


//-----------------------------大厅服消息-------------------------------------------------------------------
// 心跳包
message msg_heart_test
{
	uint32 svr_time = 1;
}
// 登录
message msg_login_req
{
	uint32 uid  		= 1;		// 帐号ID
	bytes  key  		= 2;		// 密码		
	bytes  deviceid		= 3;		// 设备ID
	bytes  versionid	= 4;		// 版本号
	uint32 check_time  	= 5;		// 校验时间
}
// 登录返回
message msg_login_rep
{
	uint32 result 		= 1;	// 返回结果
	uint32 server_time  = 2;	// 服务器时间
}
// 退出通知
message msg_loginout_rep
{
	uint32 reason 		= 1;	// 退出原因
	bytes  deviceid		= 2;	// 设备ID
}
// 版本信息
message msg_version_info_rep
{
	bytes version = 1; // 版本信息
}

// 通知进入游戏
message msg_enter_game_rep
{
	uint32 result = 1;	
}
// 发送玩家信息
message msg_player_data_rep
{	
	base_info  base_data = 1;	// 基本信息		
}

// 请求服务器信息
message msg_svrs_info_req
{
	uint32  game_type = 1;	
} 
// 发送游戏服务器信息
message msg_svrs_info_rep
{
	repeated svr_info svrs 			= 1; // 游戏服务器信息
	uint32   cur_svrid 				= 2; // 当前游戏服务器ID(断线重连处理)
}
// 进入游戏服务器
message msg_enter_gamesvr_req
{
	uint32 svrid 		= 1; // 游戏服务器ID
	
}
// 进入游戏服务器返回
message msg_enter_gamesvr_rep
{
	uint32 result 		= 1;
	uint32 svrid  		= 2;
	
}
// 返回大厅
message msg_back_lobby_req
{
	uint32 uid 	  = 1;
	uint32 is_action = 2;// 是否服务器主动
}
// 返回大厅反馈
message msg_back_lobby_rep
{
	uint32 result = 1;	
	uint32 reason = 2; // 返回原因
}




































